Major Update 2
Made a spring boot project from scratch, this resolves all previous conflicts.

This now can easily be connected to the React/TS frontend.